--- a/labs/index.html
+++ b/labs/index.html
@@ -99,6 +99,26 @@
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs18/">Lab 18 – Enumeración de servicios y puertos con Nmap</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs19/">Lab 19 – Fingerprinting de sistemas operativos y servicios</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs20/">Lab 20 – Detección de firewalls y técnicas de evasión</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs01/">Lab 01 – Monitorización de tráfico con Wireshark y tcpdump</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs02/">Lab 02 – Análisis de cabeceras HTTP y manipulación con Burp Suite</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs03/">Lab 03 – Enumeración de subdominios y DNS con herramientas OSINT</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs04/">Lab 04 – Fingerprinting de aplicaciones web con WhatWeb y Wappalyzer</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs05/">Lab 05 – Análisis de cabeceras de correo electrónico</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs06/">Lab 06 – Análisis de metadatos en documentos y archivos</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs07/">Lab 07 – Análisis de tráfico capturado (PCAP) y reconstrucción de sesiones</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs08/">Lab 08 – Reconstrucción avanzada de sesiones y extracción de artefactos</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs09/">Lab 09 – Análisis de logs de eventos en sistemas Windows</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs10/">Lab 10 – Análisis de logs de red y correlación de eventos</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs11/">Lab 11 – Reconocimiento activo con escaneo de red</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs12/">Lab 12 – Correlación de tráfico con Wireshark y tcpdump</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs13/">Lab 13 – Escaneo de vulnerabilidades con Nmap y NSE</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs14/">Lab 14 – Explotación de servicios con Metasploit</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs15/">Lab 15 – Post-explotación y extracción de credenciales</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs16/">Lab 16 – Análisis de tráfico malicioso y detección de C2</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs17/">Lab 17 – Análisis de malware y reversing básico</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs18/">Lab 18 – Enumeración de servicios y puertos con Nmap</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs19/">Lab 19 – Fingerprinting de sistemas operativos y servicios</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs20/">Lab 20 – Detección de firewalls y técnicas de evasión</a></li>
       </ul>
     </section>
   </main>
