--- a/labs/index.html
+++ b/labs/index.html
@@ -99,7 +99,7 @@
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs18/">Lab 18 – Enumeración de servicios y puertos con Nmap</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs19/">Lab 19 – Fingerprinting de sistemas operativos y servicios</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs20/">Lab 20 – Detección de firewalls y técnicas de evasión</a></li>
-        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs01/">Lab 01 – Monitorización de tráfico con Wireshark y tcpdump</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs21/">Lab 21 – Fingerprinting de firewalls y detección de reglas activas</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs02/">Lab 02 – Análisis de cabeceras HTTP y manipulación con Burp Suite</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs03/">Lab 03 – Enumeración de subdominios y DNS con herramientas OSINT</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs04/">Lab 04 – Fingerprinting de aplicaciones web con WhatWeb y Wappalyzer</a></li>
