--- a/labs/index.html
+++ b/labs/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Laboratorios – El Pergamino Digital</title>
+  <title>Lab 23 – Bypass de WAF y evasión avanzada en aplicaciones web</title>
   <link rel="icon" href="/el-pergamino-digital/assets/favicon.png" type="image/png" />
   <style>
     :root { color-scheme: dark; }
